--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,8 +1,11 @@
 $colorWhite: #ffffff;
 $colorGray: #b3b3b3;
-$colorGrayLight: #d9d9d9;
+$colorGrayLight: #DEDEDE;
 $colorBlack: #000;
 $colorGreen: #6cc038;
-$colorBlue: #2e68f1;
-$colorBlueVivid: #3b67f8;
+$colorBlue: #3b67f8;
 $colorRed: #c10000;
+
+
+$colorDarkBlue: #2b1a63;
+$colorLightBlue: #6e85b2;
