--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -4,22 +4,18 @@
     cursor: pointer;
     border: 0;
     border-radius: 4px;
-    font-weight: 600;
-    margin: 0 10px;
-    padding: 10px 0;
-    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
-    transition: 0.4s;
-    background-color: $colorBlueVivid;
-    color: $colorWhite;
-    padding: 10px;
-    padding: 10px;
-    font-size: 1em;
+    margin-left: 5px;
+    background-color: $colorBlue;
+    color: #ffffff;
+    padding: 10px 18px;
+    font-size: 15px;
     font-weight: 100;
+    transition: all .5s;
     box-shadow: 0px 0px 15x -13px rgba(0,0,0,0.75);
     transition: all .5s;
 
     &:hover{
-        box-shadow: 0px 0px 15px -2px $colorBlueVivid;
+        box-shadow: 0px 0px 15px -2px $colorBlue;
     }
     &:active{
         box-shadow: inset 0px 0px 15px -2px rgba(0,0,0,0.3);
