--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -10,35 +10,41 @@
     opacity: 0;
     display: flex;
     justify-content: space-around;
-    font-family: Arial, Helvetica, sans-serif;
     transition: all .5s;
 
     &__header{
         position: relative;
-        margin-bottom: 40px;
+        padding: 5px 13px;
+        margin-bottom: 30px;
         h1 {
             color: $colorBlack;
-            font-size: 1.1em;
+            font-size: 20px;
+            margin: 5px 0 2px;
+            font-weight: 500;
+            letter-spacing: .3px;
         }
         label {
-            font-size: .7em;
-            background-color:  $colorRed;
+            font-size: 12px;
+            background-color: $colorRed;
             color: $colorWhite;
-            padding: 2px 8px;
+            padding: 1px 8px 1px 9px;
             border-radius: 2px;
             font-weight: 100;
-            margin-left: 10px;
+            margin: 6px 4px;
+            vertical-align: top;
+            display: inline-block;
+            letter-spacing: 0.9px;
         }
         h4 {
             font-weight: 100;
             margin: 0;
-            font-size: .8em;
-
+            font-size: 13px;
+            letter-spacing: 0.5px;
         }
         button {
             position: absolute;
-            right: 0;
-            top: 0;
+            right: 14px;
+            top: 11px;
             border: 0;
             background: transparent;
             font-size: 1em;
@@ -51,12 +57,16 @@
             height: 30px;
             transition: all .5s;
 
+            img {
+                width: 12px;
+                height: 12px;
+            }
+
             &:hover {
-                background-color: $colorGray;
-                color: $colorWhite;
+                box-shadow: 0px 0px 16px -6px rgba(0, 0, 0, 0.75);
             }
             &:active {
-                color: $colorBlack;
+                box-shadow: inset 0px 0px 11px -6px rgba(0, 0, 0, 0.75);
             }
         }
     }
@@ -64,14 +74,31 @@
     &__body {
         width: 920px;
         max-width: 95%;
-        height: 300px;
+        height: 327px;
         background-color: #fff;
         margin-top: 100px;
         z-index: 1;
-        border-top: 3px solid #3c6aa2;
-        border-radius: 0 0 5px 5px;
+        border-radius: 5px;
         box-shadow: 10px 10px 68px -17px rgba(0,0,0,0.75);
-        padding: 20px;
+        position: relative;
+        overflow: hidden;
+        padding-top: 4px;
+        
+        &:before{
+            content: '';
+            background: linear-gradient(90deg, $colorDarkBlue 0%, $colorLightBlue 100%);
+            height: 4px;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        &-container{
+            border: 1px solid $colorGrayLight;
+            border-top: 0;
+            padding: 10px;
+        }
     }
     &__overlay{
         background-color: #000;
