--- a/src/components/Steps/steps.scss
+++ b/src/components/Steps/steps.scss
@@ -3,11 +3,10 @@
 .steps-container{
     flex-direction: row;
     display: flex;
-    counter-reset: steps;
+    padding: 0 5px;
 }
 
 .step-item {
-    font-family: Arial, Helvetica, sans-serif;
     flex-grow: 1;
     text-align: center;
     width: 100%;
@@ -18,34 +17,39 @@
         &:after,&:before{
             content: "";
             flex-grow: 1;
-            height: 3px;
+            height: 2px;
             background-color: $colorGray;
         }
         > span {
             background: $colorGray;
             border-radius: 50%;
-            width: 20px;
-            height: 20px;
+            width: 24px;
+            height: 24px;
             display: inline-block;
             text-align: center;
-            line-height: 20px;
+            line-height: 24px;
             margin: 0 5px;
             text-align: center;
             color: $colorWhite;
         }
+        img {
+            width: 20px;
+            margin-top: 3px;
+        }
     }
     &__index{
-        font-size: 0.7em;
+        font-size: 15px;
         display: block;
         text-align: center;
     }
     &__title {
         color: $colorGray;
-        padding: 10px 0;
-        font-size: 1em;
+        padding: 7px 0;
+        letter-spacing: 0.4px;
     }
     &__status {
-        margin:  10px 0;
+        margin: 2px 0;
+        letter-spacing: 0.4px;
     }
     &__status-name {
         color: $colorGray;
@@ -53,7 +57,7 @@
     }
     &__status-date {
         color: $colorBlack;
-        font-size: .9em;
+        font-size: 13px;
         margin: 5px 0;
     }
 
