--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -8,11 +8,10 @@
     background-color: $colorBlue;
     color: #ffffff;
     padding: 10px 18px;
-    font-size: 15px;
+    @include font-size(15px);
     font-weight: 100;
-    transition: all .5s;
-    box-shadow: 0px 0px 15x -13px rgba(0,0,0,0.75);
-    transition: all .5s;
+    @include transition(box-shadow .5s);
+    box-shadow: 0px 4px 10px -1px #bcc4dc;
 
     &:hover{
         box-shadow: 0px 0px 15px -2px $colorBlue;
