--- a/src/components/Steps/steps.scss
+++ b/src/components/Steps/steps.scss
@@ -38,7 +38,7 @@
         }
     }
     &__index{
-        font-size: 15px;
+        @include font-size(15px);
         display: block;
         text-align: center;
     }
@@ -53,11 +53,11 @@
     }
     &__status-name {
         color: $colorGray;
-        font-size: 0.85em;
+        @include font-size(14px);
     }
     &__status-date {
         color: $colorBlack;
-        font-size: 13px;
+        @include font-size(13px);
         margin: 5px 0;
     }
 
@@ -100,6 +100,67 @@
             &:after{
                 background-color: $colorGreen;
             }
+        }
+    }
+}
+
+@include bp-medium{
+    .steps-container{
+        flex-direction: column;
+    }
+    
+    .step-item {
+        display: flex;
+        border-bottom: 2px solid $colorGray;
+    
+        &__icon{
+            &:after,&:before{
+                display: none;
+            }
+            > span {
+ 
+            }
+            img {
+
+            }
+        }
+        &__title {
+            padding: 15px;
+            flex-grow: 1;
+            text-align: left;
+        }
+        &__status {
+            text-align: right;
+            margin: 0;
+            padding: 8px 0 0;
+        }
+        &__status-name {
+            @include font-size(12px);
+        }
+        &__status-date {
+            @include font-size(12px);
+            margin: 0;
+        }
+
+    
+        &.is-done {
+            border-color: $colorGreen;
+
+            // .step-item__index{
+            //     display: none;
+            // }
+            // .step-item__icon{
+    
+            //     &:before{
+            //         background-color: $colorGreen;
+            //     }
+            //     > span {
+            //         background: transparent;
+            //         path {
+            //             fill: $colorGreen;
+            //         }
+            //     }
+            // }
         }
     }
 }
