--- a/src/theme.scss
+++ b/src/theme.scss
@@ -5,7 +5,78 @@ $colorBlack: #000;
 $colorGreen: #6cc038;
 $colorBlue: #3b67f8;
 $colorRed: #c10000;
-
-
 $colorDarkBlue: #2b1a63;
 $colorLightBlue: #6e85b2;
+
+
+// Mixins
+
+@mixin transition($args...) {
+    -webkit-transition: $args;
+    -moz-transition: $args;
+    -ms-transition: $args;
+    -o-transition: $args;
+    transition: $args;
+}
+
+@mixin gradient($from, $to) {
+    background: $from;
+    background: -moz-linear-gradient(90deg, $from 0%, $to 100%);
+    background: -webkit-linear-gradient(90deg, $from 0%, $to 100%);
+    background: linear-gradient(90deg, $from 0%, $to 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#{$from}",endColorstr="#{$to}",GradientType=1);
+}
+
+@mixin keyframes($animation-name) {
+    @-webkit-keyframes #{$animation-name} {
+        @content;
+    }
+    @-moz-keyframes #{$animation-name} {
+        @content;
+    }  
+    @-ms-keyframes #{$animation-name} {
+        @content;
+    }
+    @-o-keyframes #{$animation-name} {
+        @content;
+    }  
+    @keyframes #{$animation-name} {
+        @content;
+    }
+}
+
+@mixin animation($str) {
+    -webkit-animation: #{$str};
+    -moz-animation: #{$str};
+    -ms-animation: #{$str};
+    -o-animation: #{$str};
+    animation: #{$str};      
+}
+
+@mixin bp-large {
+    @media only screen and (max-width: 60em) {
+        @content;
+    }
+}
+
+@mixin bp-medium {
+    @media only screen and (max-width: 40em) {
+        @content;
+    }
+}
+
+@mixin bp-small {
+    @media only screen and (max-width: 30em) {
+        @content;
+    }
+}
+
+@function calculateRem($size) {
+    $remSize: $size / 16px;
+    @return $remSize * 1rem;
+}
+
+@mixin font-size($size) {
+    font-size: $size;
+    font-size: calculateRem($size);
+}
