--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -12,6 +12,7 @@
     font-weight: 100;
     @include transition(box-shadow .5s);
     box-shadow: 0px 4px 10px -1px #bcc4dc;
+    font-family: 'Jost', sans-serif;
 
     &:hover{
         box-shadow: 0px 0px 15px -2px $colorBlue;
