modal mobile height

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -126,7 +126,11 @@
     .modal{
         overflow: hidden;
         overflow-y: scroll;
-
+        position: absolute;
+        &_body{
+            display: flex;
+            flex-direction: column;
+        }
         &__header{
             padding-right: 50px;
         }
